[package]
name = "rosbag"
version = "0.6.3"
description = "Utilities for reading ROS bag files."
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63"
readme = "README.md"
documentation = "https://docs.rs/rosbag"
repository = "https://github.com/newpavlov/rosbag-rs"
keywords = ["ros", "datasets", "robotics"]
categories = ["parser-implementations", "science::robotics"]

[dependencies]
byteorder = "1.1"
bzip2 = "0.4.4"
base16ct = "0.2"
log = "0.4.4"
lz4 = "1.23.2"
memmap2 = "0.9"
